mlcluster-vpc.template
AWSTemplateFormatVersion: 2010-09-09
Description: Deploy a MarkLogic Cluster on AWS with a new VPC
Metadata:
  version: 12.0.1
  binary: MarkLogic-12.0.1-rhel.x86_64.rpm
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Resource Configuration"
        Parameters:
          - IAMRole
          - VolumeSize
          - VolumeType
          - VolumeIOPS
          - VolumeThroughput
          - VolumeEncryption
          - VolumeEncryptionKey
          - InstanceType
          - SpotPrice
          - KeyName
          - NumberOfZones
          - NodesPerZone
          - AZ
          - LogSNS
      - Label:
          default: "Network Configuration"
        Parameters:
          - VpcCidr
          - PrivateSubnet1Cidr
          - PrivateSubnet2Cidr
          - PrivateSubnet3Cidr
          - PublicSubnet1Cidr
          - PublicSubnet2Cidr
          - PublicSubnet3Cidr
      - Label:
          default: "MarkLogic Configuration"
        Parameters:
          - AdminUser
          - AdminPass
          - Licensee
          - LicenseKey
    ParameterLabels:
      AdminUser:
        default: Admin User
      AdminPass:
        default: Admin password
      Licensee:
        default: Licensee
      LicenseKey:
        default: License Key
      IAMRole:
        default: IAM Role
      LogSNS:
        default: Logging SNS ARN
      VolumeSize:
        default: Volume Size
      VolumeType:
        default: Volume Type
      VolumeIOPS:
        default: Volume Iops
      VolumeThroughput:
        default: Volume Throughput
      VolumeEncryption:
        default: Volume Encryption
      VolumeEncryptionKey:
        default: Volume Encryption Key ARN
      InstanceType:
        default: Instance Type
      SpotPrice:
        default: Spot Price
      KeyName:
        default: SSH Key Name
      NumberOfZones:
        default: Number of Zones
      NodesPerZone:
        default: Nodes per Zone
      AZ:
        default: Availability Zone
      VpcCidr:
        default: VPC CIDR
      PrivateSubnet1Cidr:
        default: Private Subnet 1 CIDR
      PrivateSubnet2Cidr:
        default: Private Subnet 2 CIDR
      PrivateSubnet3Cidr:
        default: Private Subnet 3 CIDR
      PublicSubnet1Cidr:
        default: 'Public Subnet 1 CIDR'
      PublicSubnet2Cidr:
        default: 'Public Subnet 2 CIDR'
      PublicSubnet3Cidr:
        default: 'Public Subnet 3 CIDR'
Parameters:
  # resource configuration
  IAMRole:
    Description: IAM Role
    Type: String
  VolumeSize:
    Description: The EBS Data volume size (GB) for all nodes
    Type: Number
    MinValue: '10'
    MaxValue: '1000'
    Default: '10'
  VolumeType:
    Description: The EBS Data volume Type
    Type: String
    AllowedValues:
      - standard
      - gp2
      - gp3
    Default: gp2
  VolumeIOPS:
    Description: The number of I/O operations per second for a gp3 volume. This parameter is only applicable for a gp3 volume
    Type: Number
    MinValue: '3000'
    MaxValue: '16000'
    Default: '3000'
  VolumeThroughput:
    Description: The throughput to provision for a gp3 volume. This parameter is only applicable for a gp3 volume
    Type: Number
    MinValue: '125'
    MaxValue: '1000'
    Default: '125'
  VolumeEncryption:
    Description: Whether to enable volume encryption
    Type: String
    AllowedValues:
      - enable
      - disable
    Default: enable
  VolumeEncryptionKey:
    Description: The key ID of AWS KMS key to encrypt volumes - Optional
    Type: String
    Default: ""
  InstanceType:
    Description: Type of EC2 instance to launch
    Type: String
    Default: r5.4xlarge
    AllowedValues:
      - ---- Pay-As-You-Go and Bring-Your-Own-License ----
      - c3.xlarge
      - c3.2xlarge
      - c3.4xlarge
      - c3.8xlarge
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - c5.xlarge
      - c5.2xlarge
      - c5.4xlarge
      - c5.9xlarge
      - c5.12xlarge
      - c5.18xlarge
      - c5.24xlarge
      - c5a.xlarge
      - c5a.2xlarge
      - c5a.4xlarge
      - c5a.8xlarge
      - c5a.12xlarge
      - c5a.16xlarge
      - c5a.24xlarge
      - c5ad.xlarge
      - c5ad.2xlarge
      - c5ad.4xlarge
      - c5ad.8xlarge
      - c5ad.12xlarge
      - c5ad.16xlarge
      - c5ad.24xlarge
      - c5d.xlarge
      - c5d.2xlarge
      - c5d.4xlarge
      - c5d.9xlarge
      - c5d.12xlarge
      - c5d.18xlarge
      - c5d.24xlarge
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c5n.9xlarge
      - c5n.18xlarge
      - c6a.xlarge
      - c6a.2xlarge
      - c6a.4xlarge
      - c6a.8xlarge
      - c6a.12xlarge
      - c6a.16xlarge
      - c6a.24xlarge
      - c6a.32xlarge
      - c6a.48xlarge
      - c6i.xlarge
      - c6i.2xlarge
      - c6i.4xlarge
      - c6i.8xlarge
      - c6i.12xlarge
      - c6i.16xlarge
      - c6i.24xlarge
      - c6i.32xlarge
      - c6id.xlarge
      - c6id.2xlarge
      - c6id.4xlarge
      - c6id.8xlarge
      - c6id.12xlarge
      - c6id.16xlarge
      - c6id.24xlarge
      - c6id.32xlarge
      - c7i.xlarge
      - c7i.2xlarge
      - c7i.4xlarge
      - c7i.8xlarge
      - c7i.12xlarge
      - c7i.16xlarge
      - c7i.24xlarge
      - c7i.48xlarge
      - c7i-flex.xlarge
      - c7i-flex.2xlarge
      - c7i-flex.4xlarge
      - c7i-flex.8xlarge
      - c7i-flex.12xlarge
      - c7i-flex.16xlarge
      - c7a.xlarge
      - c7a.2xlarge
      - c7a.4xlarge
      - c7a.8xlarge
      - c7a.12xlarge
      - c7a.16xlarge
      - c7a.24xlarge
      - c7a.32xlarge
      - c7a.48xlarge
      - c8i.xlarge
      - c8i.2xlarge
      - c8i.4xlarge
      - c8i.8xlarge
      - c8i.12xlarge
      - c8i.16xlarge
      - c8i.24xlarge
      - c8i.32xlarge
      - c8i.48xlarge
      - c8i.96xlarge
      - c8i-flex.xlarge
      - c8i-flex.2xlarge
      - c8i-flex.4xlarge
      - c8i-flex.8xlarge
      - c8i-flex.12xlarge
      - c8i-flex.16xlarge
      - i2.2xlarge
      - i2.4xlarge
      - i2.8xlarge
      - i2.xlarge
      - i3.xlarge
      - i3.2xlarge
      - i3.4xlarge
      - i3.8xlarge
      - i3.16xlarge
      - i3en.xlarge
      - i3en.2xlarge
      - i3en.3xlarge
      - i3en.6xlarge
      - i3en.12xlarge
      - i3en.24xlarge
      - i4i.xlarge
      - i4i.2xlarge
      - i4i.4xlarge
      - i4i.8xlarge
      - i4i.12xlarge
      - i4i.16xlarge
      - i4i.24xlarge
      - i4i.32xlarge
      - i7ie.xlarge
      - i7ie.2xlarge
      - i7ie.3xlarge
      - i7ie.6xlarge
      - i7ie.12xlarge
      - i7ie.18xlarge
      - i7ie.24xlarge
      - i7ie.48xlarge
      - m3.xlarge
      - m3.2xlarge
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - m4.16xlarge
      - m5.xlarge
      - m5.2xlarge
      - m5.4xlarge
      - m5.8xlarge
      - m5.12xlarge
      - m5.16xlarge
      - m5.24xlarge
      - m5a.xlarge
      - m5a.2xlarge
      - m5a.4xlarge
      - m5a.8xlarge
      - m5a.12xlarge
      - m5a.16xlarge
      - m5a.24xlarge
      - m5d.xlarge
      - m5d.2xlarge
      - m5d.4xlarge
      - m5d.8xlarge
      - m5d.16xlarge
      - m5d.12xlarge
      - m5d.24xlarge
      - m5ad.xlarge
      - m5ad.2xlarge
      - m5ad.4xlarge
      - m5ad.8xlarge
      - m5ad.12xlarge
      - m5ad.16xlarge
      - m5ad.24xlarge
      - m5zn.xlarge
      - m5zn.2xlarge
      - m5zn.3xlarge
      - m5zn.6xlarge
      - m5zn.12xlarge
      - m5n.xlarge
      - m5n.2xlarge
      - m5n.4xlarge
      - m5n.8xlarge
      - m5n.12xlarge
      - m5n.16xlarge
      - m5n.24xlarge
      - m5dn.xlarge
      - m5dn.2xlarge
      - m5dn.4xlarge
      - m5dn.8xlarge
      - m5dn.12xlarge
      - m5dn.16xlarge
      - m5dn.24xlarge
      - m6a.xlarge
      - m6a.2xlarge
      - m6a.4xlarge
      - m6a.8xlarge
      - m6a.12xlarge
      - m6a.16xlarge
      - m6a.24xlarge
      - m6a.32xlarge
      - m6a.48xlarge
      - m6i.xlarge
      - m6i.2xlarge
      - m6i.4xlarge
      - m6i.8xlarge
      - m6i.12xlarge
      - m6i.16xlarge
      - m6i.24xlarge
      - m6i.32xlarge
      - m6id.xlarge
      - m6id.2xlarge
      - m6id.4xlarge
      - m6id.8xlarge
      - m6id.12xlarge
      - m6id.16xlarge
      - m6id.24xlarge
      - m6id.32xlarge
      - m7i.xlarge
      - m7i.2xlarge
      - m7i.4xlarge
      - m7i.8xlarge
      - m7i.12xlarge
      - m7i.16xlarge
      - m7i.24xlarge
      - m7i.48xlarge
      - m7i-flex.xlarge
      - m7i-flex.2xlarge
      - m7i-flex.4xlarge
      - m7i-flex.8xlarge
      - m7i-flex.12xlarge
      - m7i-flex.16xlarge
      - m7a.xlarge
      - m7a.2xlarge
      - m7a.4xlarge
      - m7a.8xlarge
      - m7a.12xlarge
      - m7a.16xlarge
      - m7a.24xlarge
      - m7a.32xlarge
      - m7a.48xlarge
      - m8a.xlarge
      - m8a.2xlarge
      - m8a.4xlarge
      - m8a.8xlarge
      - m8a.12xlarge
      - m8a.16xlarge
      - m8a.24xlarge
      - m8a.48xlarge
      - m8i.xlarge
      - m8i.2xlarge
      - m8i.4xlarge
      - m8i.8xlarge
      - m8i.12xlarge
      - m8i.16xlarge
      - m8i.24xlarge
      - m8i.32xlarge
      - m8i.48xlarge
      - m8i.96xlarge
      - m8i-flex.xlarge
      - m8i-flex.2xlarge
      - m8i-flex.4xlarge
      - m8i-flex.8xlarge
      - m8i-flex.12xlarge
      - m8i-flex.16xlarge
      - r3.xlarge
      - r3.2xlarge
      - r3.4xlarge
      - r3.8xlarge
      - r4.xlarge
      - r4.2xlarge
      - r4.4xlarge
      - r4.8xlarge
      - r4.16xlarge
      - r5.xlarge
      - r5.2xlarge
      - r5.4xlarge
      - r5.8xlarge
      - r5.12xlarge
      - r5.16xlarge
      - r5.24xlarge
      - r5a.xlarge
      - r5a.2xlarge
      - r5a.4xlarge
      - r5a.8xlarge
      - r5a.12xlarge
      - r5a.16xlarge
      - r5a.24xlarge
      - r5ad.xlarge
      - r5ad.2xlarge
      - r5ad.4xlarge
      - r5ad.8xlarge
      - r5ad.12xlarge
      - r5ad.16xlarge
      - r5ad.24xlarge
      - r5b.xlarge
      - r5b.2xlarge
      - r5b.4xlarge
      - r5b.8xlarge
      - r5b.12xlarge
      - r5b.16xlarge
      - r5b.24xlarge
      - r5d.xlarge
      - r5d.2xlarge
      - r5d.4xlarge
      - r5d.8xlarge
      - r5d.12xlarge
      - r5d.16xlarge
      - r5d.24xlarge
      - r5dn.xlarge
      - r5dn.2xlarge
      - r5dn.4xlarge
      - r5dn.8xlarge
      - r5dn.12xlarge
      - r5dn.16xlarge
      - r5dn.24xlarge
      - r5n.xlarge
      - r5n.2xlarge
      - r5n.4xlarge
      - r5n.8xlarge
      - r5n.12xlarge
      - r5n.16xlarge
      - r5n.24xlarge
      - r6a.xlarge
      - r6a.2xlarge
      - r6a.4xlarge
      - r6a.8xlarge
      - r6a.12xlarge
      - r6a.16xlarge
      - r6a.24xlarge
      - r6a.32xlarge
      - r6a.48xlarge
      - r6i.xlarge
      - r6i.2xlarge
      - r6i.4xlarge
      - r6i.8xlarge
      - r6i.12xlarge
      - r6i.16xlarge
      - r6i.24xlarge
      - r6i.32xlarge
      - r6id.xlarge
      - r6id.2xlarge
      - r6id.4xlarge
      - r6id.8xlarge
      - r6id.12xlarge
      - r6id.16xlarge
      - r6id.24xlarge
      - r6id.32xlarge
      - r7i.xlarge
      - r7i.2xlarge
      - r7i.4xlarge
      - r7i.8xlarge
      - r7i.12xlarge
      - r7i.16xlarge
      - r7i.24xlarge
      - r7i.48xlarge
      - r7iz.xlarge
      - r7iz.2xlarge
      - r7iz.4xlarge
      - r7iz.8xlarge
      - r7iz.12xlarge
      - r7iz.16xlarge
      - r7iz.32xlarge
      - r7a.xlarge
      - r7a.2xlarge
      - r7a.4xlarge
      - r7a.8xlarge
      - r7a.12xlarge
      - r7a.16xlarge
      - r7a.24xlarge
      - r7a.32xlarge
      - r7a.48xlarge
      - r8a.xlarge
      - r8a.2xlarge
      - r8a.4xlarge
      - r8a.8xlarge
      - r8a.12xlarge
      - r8a.16xlarge
      - r8a.24xlarge
      - r8a.48xlarge
      - r8i.xlarge
      - r8i.2xlarge
      - r8i.4xlarge
      - r8i.8xlarge
      - r8i.12xlarge
      - r8i.16xlarge
      - r8i.24xlarge
      - r8i.32xlarge
      - r8i.48xlarge
      - r8i.96xlarge
      - r8i-flex.xlarge
      - r8i-flex.2xlarge
      - r8i-flex.4xlarge
      - r8i-flex.8xlarge
      - r8i-flex.12xlarge
      - r8i-flex.16xlarge
      - x1.16xlarge
      - x1.32xlarge
      - x1e.xlarge
      - x1e.2xlarge
      - x1e.4xlarge
      - x1e.8xlarge
      - x1e.16xlarge
      - x1e.32xlarge
      - x2idn.16xlarge
      - x2idn.24xlarge
      - x2idn.32xlarge
      - x2iedn.xlarge
      - x2iedn.2xlarge
      - x2iedn.4xlarge
      - x2iedn.8xlarge
      - x2iedn.16xlarge
      - x2iedn.24xlarge
      - x2iedn.32xlarge
      - x2iezn.2xlarge
      - x2iezn.4xlarge
      - x2iezn.6xlarge
      - x2iezn.8xlarge
      - x2iezn.12xlarge
      - d2.xlarge
      - d2.2xlarge
      - d2.4xlarge
      - d2.8xlarge
      - d3.xlarge
      - d3.2xlarge
      - d3.4xlarge
      - d3.8xlarge
      - d3en.xlarge
      - d3en.2xlarge
      - d3en.4xlarge
      - d3en.6xlarge
      - d3en.8xlarge
      - d3en.12xlarge
      - dl1.24xlarge
      - h1.2xlarge
      - h1.4xlarge
      - h1.8xlarge
      - h1.16xlarge
      - inf1.xlarge
      - inf1.2xlarge
      - inf1.6xlarge
      - inf1.24xlarge
      - trn1.2xlarge
      - trn1.32xlarge
      - u-3tb1.56xlarge
      - u-6tb1.56xlarge
      - u-6tb1.112xlarge
      - u-9tb1.112xlarge
      - u-12tb1.112xlarge
      - u-18tb1.112xlarge
      - vt1.3xlarge
      - vt1.6xlarge
      - vt1.24xlarge
      - z1d.xlarge
      - z1d.2xlarge
      - z1d.3xlarge
      - z1d.6xlarge
      - z1d.12xlarge
      - -------------- Bring-Your-Own-License Only --------------
      - c3.large
      - c4.large
      - c5.metal
      - c5.large
      - c5a.large
      - c5ad.large
      - c5d.metal
      - c5d.large
      - c5n.large
      - c5n.metal
      - c6a.large
      - c6a.metal
      - c6i.large
      - c6i.metal
      - c6id.large
      - c6id.metal
      - c7i.large
      - c7i.metal-24xl
      - c7i.metal-48xl
      - c7i-flex.large
      - c7a.medium
      - c7a.large
      - c7a.metal-48xl
      - c8i.large
      - c8i.metal-48xl
      - c8i.metal-96xl
      - c8i-flex.large
      - i3.large
      - i3.metal
      - i3en.large
      - i3en.metal
      - i4i.large
      - i4i.metal
      - i7ie.large
      - i7ie.metal-24xl
      - i7ie.metal-48xl
      - m3.large
      - m3.medium
      - m4.large
      - m5.metal
      - m5.large
      - m5a.large
      - m5ad.large
      - m5d.metal
      - m5d.large
      - m5zn.large
      - m5zn.metal
      - m5n.large
      - m5n.metal
      - m5dn.large
      - m5dn.metal
      - m6a.large
      - m6a.metal
      - m6i.large
      - m6i.metal
      - m6id.large
      - m6id.metal
      - m7i.large
      - m7i.metal-24xl
      - m7i.metal-48xl
      - m7i-flex.large
      - m7a.medium
      - m7a.large
      - m7a.metal-48xl
      - m8a.medium
      - m8a.large
      - m8a.metal-24xl
      - m8a.metal-48xl
      - m8i.large
      - m8i.metal-48xl
      - m8i.metal-96xl
      - m8i-flex.large
      - r3.large
      - r4.large
      - r5.metal
      - r5.large
      - r5a.large
      - r5d.metal
      - r5ad.large
      - r5d.large
      - r5dn.large
      - r5dn.metal
      - r5b.large
      - r5b.metal
      - r5n.large
      - r5n.metal
      - r6a.large
      - r6a.metal
      - r6i.large
      - r6i.metal
      - r6id.large
      - r6id.metal
      - r7i.large
      - r7i.metal-24xl
      - r7i.metal-48xl
      - r7iz.large
      - r7iz.metal-16xl
      - r7iz.metal-32xl
      - r7a.medium
      - r7a.large
      - r7a.metal-48xl
      - r8a.medium
      - r8a.large
      - r8a.metal-24xl
      - r8a.metal-48xl
      - r8i.large
      - r8i.metal-48xl
      - r8i.metal-96xl
      - r8i-flex.large
      - t2.2xlarge
      - t2.large
      - t2.medium
      - t2.micro
      - t2.nano
      - t2.small
      - t2.xlarge
      - t3.2xlarge
      - t3.large
      - t3.medium
      - t3.micro
      - t3.nano
      - t3.small
      - t3.xlarge
      - t3a.2xlarge
      - t3a.large
      - t3a.medium
      - t3a.micro
      - t3a.nano
      - t3a.small
      - t3a.xlarge
      - x2idn.metal
      - x2iedn.metal
      - x2iezn.metal
      - z1d.metal
      - z1d.large
  SpotPrice:
    Description: Spot price for instances in USD/Hour - Optional/advanced.
    Type: Number
    MinValue: '0'
    MaxValue: '2'
    Default: '0'
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance.
    Type: String
  NumberOfZones:
    Description: Total number of Availability Zones, which can be 1 or 3. Select 3 zones for Application Load Balancer. Once the stack has been created, the number of Availability Zones cannot be changed.
    Type: Number
    AllowedValues:
      - 1
      - 3
    Default: 3
  NodesPerZone:
    Description: Total number of nodes per Zone. Set to 0 to shutdown/hibernate
    Type: Number
    MinValue: '0'
    MaxValue: '20'
    Default: '1'
  AZ:
    Description: The Availability Zones for VPC subnets and instances. Accept either 1 zone or 3 zones. In the order of Subnet 1, Subnet 2 and Subnet 3 (if applicable).
    Type: 'List<AWS::EC2::AvailabilityZone::Name>'
  LogSNS:
    Description: SNS Topic for logging - optional/advanced.
    Type: String
    Default: none
  # network configuration
  VpcCidr:
    Description: CIDR Block for the Virtual Private Cloud (VPC).
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.0.0/16
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  PrivateSubnet1Cidr:
    Description: CIDR Block for the private subnet 1.
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.0.0/23
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  PrivateSubnet2Cidr:
    Description: CIDR Block for the private subnet 2. Only applicable to multi-zone cluster.
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.32.0/23
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  PrivateSubnet3Cidr:
    Description: CIDR Block for the private subnet 3. Only applicable to multi-zone cluster.
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.64.0/23
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  PublicSubnet1Cidr:
    Description: CIDR Block for the public subnet 1.
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.96.0/23
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  PublicSubnet2Cidr:
    Description: CIDR Block for the public subnet 2. Only applicable to multi-zone cluster.
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.128.0/23
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  PublicSubnet3Cidr:
    Description: CIDR Block for the public subnet 3. Only applicable to multi-zone cluster.
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.160.0/23
    ConstraintDescription: CIDR block must be in format x.x.x.x/16-28
  # marklogic configuration
  AdminUser:
    Description: The MarkLogic administrator username
    Type: String
  AdminPass:
    Description: The MarkLogic administrator password
    Type: String
    NoEcho: 'true'
    AllowedPattern: >-
      ^(?!.*[*]).*$
    ConstraintDescription: Admin password must contain any characters except asterisk (*).
  Licensee:
    Description: The MarkLogic Licensee or 'none'. Provide none/none to choose PAYG version. Provide valid Licensee/Licensekey to choose BYOL version.
    Type: String
    Default: none
  LicenseKey:
    Description: The MarkLogic License Key or 'none'. Provide none/none to choose PAYG version. Provide valid Licensee/Licensekey to choose BYOL version.
    Type: String
    Default: none
Conditions:
  UseLogSNS: !Not [!Equals [!Ref LogSNS, "none"]]
  UseSpot: !Not
    - !Equals
      - !Ref SpotPrice
      - 0
  #MultiZone (3 zones) and SingleZone conditions used for the conditional resource creation based on number of zones selected.
  MultiZone: !Not [!Equals [!Ref NumberOfZones, 1]]
  SingleZone: !Equals [!Ref NumberOfZones, 1]
  PAYG: !Or [ !And [!Equals [!Ref LicenseKey, ''], !Equals [!Ref Licensee, '']], !And [!Equals [!Ref LicenseKey, 'none'], !Equals [!Ref Licensee, 'none']] ]
  UseVolumeEncryption: !Equals [!Ref VolumeEncryption, 'enable']
  HasCustomEBSKey: !Not [!Equals [!Ref VolumeEncryptionKey, '']]
  GP3: !Equals [!Ref VolumeType, 'gp3']
Mappings:
  Variable:
    LambdaPackageBucket:
      base: 'ml-db-lambda-'
    TemplateUrl:
      base: 'https://s3.amazonaws.com/marklogic-db-template-releases'
    S3Directory:
      base: '12.0.1'
  LicenseRegion2AMI:
    us-east-1:
      PAYGAl2023: ami-0198b8931e9597271
      BYOLAl2023: ami-0a8536507241f95b0
    us-east-2:
      PAYGAl2023: ami-0877b64dae8264415
      BYOLAl2023: ami-082cc98b2c01e486a
    us-west-1:
      PAYGAl2023: ami-07890fc78f4ddfa20
      BYOLAl2023: ami-05c9a962410c2821b
    us-west-2:
      PAYGAl2023: ami-0577eb149c9e0f53f
      BYOLAl2023: ami-0262dd8d014bf71ba
    eu-central-1:
      PAYGAl2023: ami-06348556399c8ab69
      BYOLAl2023: ami-00cb5a3527e7c0d11
    eu-west-1:
      PAYGAl2023: ami-0fa7bc44cd9ab1f85
      BYOLAl2023: ami-0bc2b4d46367806b0
    ap-south-1:
      PAYGAl2023: ami-0f481ba0a6819ced6
      BYOLAl2023: ami-00b59374107e5efb6
    ap-southeast-1:
      PAYGAl2023: ami-0c373c6c8a2316c80
      BYOLAl2023: ami-0b9bd265ef165a07b
    ap-southeast-2:
      PAYGAl2023: ami-0c65a907408226a3e
      BYOLAl2023: ami-02bad1ef2c6d4a91a
    ap-northeast-1:
      PAYGAl2023: ami-0254bc4adaf13e3b9
      BYOLAl2023: ami-07e8b312b1016bf67
    ap-northeast-2:
      PAYGAl2023: ami-05995b5f5807873d7
      BYOLAl2023: ami-0afd77ba0d7a0c129
    sa-east-1:
      PAYGAl2023: ami-05ec8fee12de236a5
      BYOLAl2023: ami-09d883ea308449555
    eu-west-2:
      PAYGAl2023: ami-0f5cff9d243f31521
      BYOLAl2023: ami-0588d104a52fbc326
    ca-central-1:
      PAYGAl2023: ami-0f34d118b23b51bf5
      BYOLAl2023: ami-0c78eccd03e957005
    eu-west-3:
      PAYGAl2023: ami-01fa9155eb17992c5
      BYOLAl2023: ami-0637199acc5327534
Resources:
  VpcStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      NotificationARNs:
        - !If
          - UseLogSNS
          - !Ref LogSNS
          - !Ref 'AWS::NoValue'
      Parameters:
        MultiZone: !If [MultiZone, 'true', 'false']
        AZ: !Join [',', !Ref AZ]
        VpcCidr: !Ref VpcCidr
        PrivateSubnet1Cidr: !Ref PrivateSubnet1Cidr
        PrivateSubnet2Cidr: !Ref PrivateSubnet2Cidr
        PrivateSubnet3Cidr: !Ref PrivateSubnet3Cidr
        PublicSubnet1Cidr: !Ref PublicSubnet1Cidr
        PublicSubnet2Cidr: !Ref PublicSubnet2Cidr
        PublicSubnet3Cidr: !Ref PublicSubnet3Cidr
      TemplateURL: !Join ["/", [!FindInMap [Variable,"TemplateUrl","base"],!FindInMap [Variable,"S3Directory","base"],'ml-vpc.template']]
      TimeoutInMinutes: 5
  ManagedEniStack:
    Type: AWS::CloudFormation::Stack
    DependsOn:
      - VpcStack
      - InstanceSecurityGroup
    Properties:
      NotificationARNs:
        - !If
          - UseLogSNS
          - !Ref LogSNS
          - !Ref 'AWS::NoValue'
      Parameters:
        S3Bucket: !Join [ "", [!FindInMap [Variable,"LambdaPackageBucket","base"], !Ref 'AWS::Region']]
        S3Directory: !FindInMap [Variable,"S3Directory","base"]
        NodesPerZone: !Ref NodesPerZone
        NumberOfZones: !Ref NumberOfZones
        Subnets: !If
          - MultiZone
          - !Join
            - ','
            - - !GetAtt [VpcStack, Outputs.PrivateSubnet1Id]
              - !GetAtt [VpcStack, Outputs.PrivateSubnet2Id]
              - !GetAtt [VpcStack, Outputs.PrivateSubnet3Id]
          - !GetAtt [VpcStack, Outputs.PrivateSubnet1Id]
        ParentStackName: !Ref 'AWS::StackName'
        ParentStackId: !Ref 'AWS::StackId'
        SecurityGroup: !Ref InstanceSecurityGroup
      TemplateURL: !Join ['/', [!FindInMap [Variable,"TemplateUrl","base"],!FindInMap [Variable,"S3Directory","base"],'ml-managedeni.template']]
      TimeoutInMinutes: 5
  NodeMgrLambdaStack:
    Type: AWS::CloudFormation::Stack
    DependsOn: ManagedEniStack
    Properties:
      NotificationARNs:
        - !If
          - UseLogSNS
          - !Ref LogSNS
          - !Ref 'AWS::NoValue'
      Parameters:
        S3Bucket: !Join [ "", [!FindInMap [Variable,"LambdaPackageBucket","base"], !Ref 'AWS::Region']]
        S3Directory: !FindInMap [Variable,"S3Directory","base"]
      TemplateURL: !Join ['/', [!FindInMap [Variable,"TemplateUrl","base"],!FindInMap [Variable,"S3Directory","base"],'ml-nodemanager.template']]
      TimeoutInMinutes: 5
  MarklogicVolume1:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !Select [0, !Ref AZ]
      Size: !Ref VolumeSize
      Tags:
        - Key: Name
          Value: MarkLogic-GroupA-Host1-Volume0
      VolumeType: !Ref VolumeType
      Iops: !If [GP3, !Ref VolumeIOPS, !Ref 'AWS::NoValue']
      Throughput: !If [GP3, !Ref VolumeThroughput, !Ref 'AWS::NoValue']
      Encrypted: !If [UseVolumeEncryption, 'true', 'false']
      KmsKeyId: !If [HasCustomEBSKey, !Ref VolumeEncryptionKey, !Ref 'AWS::NoValue']
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c81032f7-b0ec-47ca-a236-e24d57b49ae3
  MarklogicVolume2:
    Condition: MultiZone
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !Select [1, !Ref AZ]
      Size: !Ref VolumeSize
      Tags:
        - Key: Name
          Value: MarkLogic-GroupB-Host1-Volume0
      VolumeType: !Ref VolumeType
      Iops: !If [GP3, !Ref VolumeIOPS, !Ref 'AWS::NoValue']
      Throughput: !If [GP3, !Ref VolumeThroughput, !Ref 'AWS::NoValue']
      Encrypted: !If [UseVolumeEncryption, 'true', 'false']
      KmsKeyId: !If [HasCustomEBSKey, !Ref VolumeEncryptionKey, !Ref 'AWS::NoValue']
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ddb55ae1-a00b-42ed-addd-5e03e4a2764b
  MarklogicVolume3:
    Condition: MultiZone
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !Select [2, !Ref AZ]
      Size: !Ref VolumeSize
      Tags:
        - Key: Name
          Value: MarkLogic-GroupC-Host1-Volume0
      VolumeType: !Ref VolumeType
      Iops: !If [GP3, !Ref VolumeIOPS, !Ref 'AWS::NoValue']
      Throughput: !If [GP3, !Ref VolumeThroughput, !Ref 'AWS::NoValue']
      Encrypted: !If [UseVolumeEncryption, 'true', 'false']
      KmsKeyId: !If [HasCustomEBSKey, !Ref VolumeEncryptionKey, !Ref 'AWS::NoValue']
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9094a65e-9d01-4c4c-9586-c33720e2cc9c
  MarkLogicDDBTable:
    Type: 'AWS::DynamoDB::Table'
    Properties:
      AttributeDefinitions:
        - AttributeName: node
          AttributeType: S
      KeySchema:
        - KeyType: HASH
          AttributeName: node
      ProvisionedThroughput:
        WriteCapacityUnits: '10'
        ReadCapacityUnits: '10'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e7190602-c2de-47ab-81e7-1315f8c01e2d
  #AutoScalingGroup used for SingleZone deployments that is connected to Classic Load Balancer.
  MarkLogicServerGroup:
    Condition: SingleZone
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn:
      - VpcStack
      - ManagedEniStack
      - NodeMgrLambdaStack
    Properties:
      VPCZoneIdentifier:
        - !GetAtt [VpcStack, Outputs.PrivateSubnet1Id]
      LaunchTemplate: 
        LaunchTemplateId: !Ref LaunchTemp1
        Version: !GetAtt LaunchTemp1.LatestVersionNumber
      MinSize: '0'
      MaxSize: !Ref NodesPerZone
      DesiredCapacity: !Ref NodesPerZone
      Cooldown: '300'
      HealthCheckType: EC2
      HealthCheckGracePeriod: '300'
      NotificationConfiguration: !If
        - UseLogSNS
        - TopicARN: !Ref LogSNS
          NotificationTypes:
            - 'autoscaling:EC2_INSTANCE_LAUNCH'
            - 'autoscaling:EC2_INSTANCE_LAUNCH_ERROR'
            - 'autoscaling:EC2_INSTANCE_TERMINATE'
            - 'autoscaling:EC2_INSTANCE_TERMINATE_ERROR'
        - !Ref 'AWS::NoValue'
      Tags:
        - Key: marklogic:stack:name
          Value: !Ref 'AWS::StackName'
          PropagateAtLaunch: 'true'
        - Key: marklogic:stack:id
          Value: !Ref 'AWS::StackId'
          PropagateAtLaunch: 'true'
      LifecycleHookSpecificationList:
        - LifecycleTransition: 'autoscaling:EC2_INSTANCE_LAUNCHING'
          LifecycleHookName: NodeManager
          HeartbeatTimeout: 4800
          NotificationTargetARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrSnsArn]
          RoleARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrIamArn]
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 31621dd0-4b18-4dcd-b443-db9cef64ebb1
  #AutoScalingGroup used for MultiZone deployments (3 zones) that is connected to Application Load Balancer via 9 TargetGroups.
  #All of the instances in this AutoScalingGroup will be registered to all 9 TargetGroups.
  MarkLogicServerGroup1:
    Condition: MultiZone
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn:
      - VpcStack
      - ManagedEniStack
      - NodeMgrLambdaStack
      - AlbTargetGroup1
      - AlbTargetGroup2
      - AlbTargetGroup3
      - AlbTargetGroup4
      - AlbTargetGroup5
      - AlbTargetGroup6
      - AlbTargetGroup7      
      - AlbTargetGroup8
      - AlbTargetGroup9
    Properties:
      VPCZoneIdentifier:
        - !GetAtt [VpcStack, Outputs.PrivateSubnet1Id]
      LaunchTemplate: 
        LaunchTemplateId: !Ref LaunchTemp1
        Version: !GetAtt LaunchTemp1.LatestVersionNumber
      MinSize: '0'
      MaxSize: !Ref NodesPerZone
      DesiredCapacity: !Ref NodesPerZone
      Cooldown: '300'
      HealthCheckType: EC2
      HealthCheckGracePeriod: '300'
      NotificationConfiguration: !If
        - UseLogSNS
        - TopicARN: !Ref LogSNS
          NotificationTypes:
            - 'autoscaling:EC2_INSTANCE_LAUNCH'
            - 'autoscaling:EC2_INSTANCE_LAUNCH_ERROR'
            - 'autoscaling:EC2_INSTANCE_TERMINATE'
            - 'autoscaling:EC2_INSTANCE_TERMINATE_ERROR'
        - !Ref 'AWS::NoValue'
      Tags:
        - Key: marklogic:stack:name
          Value: !Ref 'AWS::StackName'
          PropagateAtLaunch: 'true'
        - Key: marklogic:stack:id
          Value: !Ref 'AWS::StackId'
          PropagateAtLaunch: 'true'
      LifecycleHookSpecificationList:
        - LifecycleTransition: 'autoscaling:EC2_INSTANCE_LAUNCHING'
          LifecycleHookName: NodeManager
          HeartbeatTimeout: 4800
          NotificationTargetARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrSnsArn]
          RoleARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrIamArn]
      TargetGroupARNs:
        - !Ref AlbTargetGroup1
        - !Ref AlbTargetGroup2
        - !Ref AlbTargetGroup3
        - !Ref AlbTargetGroup4
        - !Ref AlbTargetGroup5
        - !Ref AlbTargetGroup6
        - !Ref AlbTargetGroup7
        - !Ref AlbTargetGroup8
        - !Ref AlbTargetGroup9
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 31621dd0-4b18-4dcd-b443-db9cef64ebb1
  #AutoScalingGroup used for MultiZone deployments (3 zones) that is connected to Application Load Balancer via 9 TargetGroups.
  #All of the instances in this AutoScalingGroup will be registered to all 9 TargetGroups.
  MarkLogicServerGroup2:
    Condition: MultiZone
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn:
      - VpcStack
      - ManagedEniStack
      - NodeMgrLambdaStack
      - AlbTargetGroup1
      - AlbTargetGroup2
      - AlbTargetGroup3
      - AlbTargetGroup4
      - AlbTargetGroup5
      - AlbTargetGroup6
      - AlbTargetGroup7      
      - AlbTargetGroup8
      - AlbTargetGroup9
    Properties:
      VPCZoneIdentifier:
        - !GetAtt [VpcStack, Outputs.PrivateSubnet2Id]
      LaunchTemplate: 
        LaunchTemplateId: !Ref LaunchTemp2
        Version: !GetAtt LaunchTemp2.LatestVersionNumber
      MinSize: '0'
      MaxSize: !Ref NodesPerZone
      DesiredCapacity: !Ref NodesPerZone
      Cooldown: '300'
      HealthCheckType: EC2
      HealthCheckGracePeriod: '300'
      NotificationConfiguration: !If
        - UseLogSNS
        - TopicARN: !Ref LogSNS
          NotificationTypes:
            - 'autoscaling:EC2_INSTANCE_LAUNCH'
            - 'autoscaling:EC2_INSTANCE_LAUNCH_ERROR'
            - 'autoscaling:EC2_INSTANCE_TERMINATE'
            - 'autoscaling:EC2_INSTANCE_TERMINATE_ERROR'
        - !Ref 'AWS::NoValue'
      Tags:
        - Key: marklogic:stack:name
          Value: !Ref 'AWS::StackName'
          PropagateAtLaunch: 'true'
        - Key: marklogic:stack:id
          Value: !Ref 'AWS::StackId'
          PropagateAtLaunch: 'true'
      LifecycleHookSpecificationList:
        - LifecycleTransition: 'autoscaling:EC2_INSTANCE_LAUNCHING'
          LifecycleHookName: NodeManager
          HeartbeatTimeout: 4800
          NotificationTargetARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrSnsArn]
          RoleARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrIamArn]
      TargetGroupARNs:
        - !Ref AlbTargetGroup1
        - !Ref AlbTargetGroup2
        - !Ref AlbTargetGroup3
        - !Ref AlbTargetGroup4
        - !Ref AlbTargetGroup5
        - !Ref AlbTargetGroup6
        - !Ref AlbTargetGroup7
        - !Ref AlbTargetGroup8
        - !Ref AlbTargetGroup9
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 87d75478-787a-41d5-bb21-9de6fe4b662e
  #AutoScalingGroup used for MultiZone deployments (3 zones) that is connected to Application Load Balancer via 9 TargetGroups.
  #All of the instances in this AutoScalingGroup will be registered to all 9 TargetGroups.
  MarkLogicServerGroup3:
    Condition: MultiZone
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    DependsOn:
      - VpcStack
      - ManagedEniStack
      - NodeMgrLambdaStack
      - AlbTargetGroup1
      - AlbTargetGroup2
      - AlbTargetGroup3
      - AlbTargetGroup4
      - AlbTargetGroup5
      - AlbTargetGroup6
      - AlbTargetGroup7      
      - AlbTargetGroup8
      - AlbTargetGroup9
    Properties:
      VPCZoneIdentifier:
        - !GetAtt [VpcStack, Outputs.PrivateSubnet3Id]
      LaunchTemplate: 
        LaunchTemplateId: !Ref LaunchTemp3
        Version: !GetAtt LaunchTemp3.LatestVersionNumber
      MinSize: '0'
      MaxSize: !Ref NodesPerZone
      DesiredCapacity: !Ref NodesPerZone
      Cooldown: '300'
      HealthCheckType: EC2
      HealthCheckGracePeriod: '300'
      NotificationConfiguration: !If
        - UseLogSNS
        - TopicARN: !Ref LogSNS
          NotificationTypes:
            - 'autoscaling:EC2_INSTANCE_LAUNCH'
            - 'autoscaling:EC2_INSTANCE_LAUNCH_ERROR'
            - 'autoscaling:EC2_INSTANCE_TERMINATE'
            - 'autoscaling:EC2_INSTANCE_TERMINATE_ERROR'
        - !Ref 'AWS::NoValue'
      Tags:
        - Key: marklogic:stack:name
          Value: !Ref 'AWS::StackName'
          PropagateAtLaunch: 'true'
        - Key: marklogic:stack:id
          Value: !Ref 'AWS::StackId'
          PropagateAtLaunch: 'true'
      LifecycleHookSpecificationList:
        - LifecycleTransition: 'autoscaling:EC2_INSTANCE_LAUNCHING'
          LifecycleHookName: NodeManager
          HeartbeatTimeout: 4800
          NotificationTargetARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrSnsArn]
          RoleARN: !GetAtt [NodeMgrLambdaStack, Outputs.NodeMgrIamArn]
      TargetGroupARNs:
        - !Ref AlbTargetGroup1
        - !Ref AlbTargetGroup2
        - !Ref AlbTargetGroup3
        - !Ref AlbTargetGroup4
        - !Ref AlbTargetGroup5
        - !Ref AlbTargetGroup6
        - !Ref AlbTargetGroup7
        - !Ref AlbTargetGroup8
        - !Ref AlbTargetGroup9
    Metadata:
      'AWS::CloudFormation::Designer':
        id: bbd8314a-6e59-4102-9ed5-232739dd0dfa
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn:
      - VpcStack
    Properties:
      GroupDescription: Enable SSH access and HTTP access on the inbound port
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7998'
          ToPort: '7998'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8010'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7997'
          ToPort: '7997'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7999'
          ToPort: '7999'
          CidrIp: 0.0.0.0/0
  InstanceSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    DependsOn:
      - InstanceSecurityGroup
    Properties:
      IpProtocol: tcp
      FromPort: '0'
      ToPort: '65355'
      GroupId: !Ref InstanceSecurityGroup
      SourceSecurityGroupId: !Ref InstanceSecurityGroup
  ElbSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: VpcStack
    Properties:
      GroupDescription: Enable SSH access and HTTP access on the inbound port
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7998'
          ToPort: '7998'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8010'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '7997'
          ToPort: '7997'
          CidrIp: 0.0.0.0/0
  LaunchTemp1:
    Type: 'AWS::EC2::LaunchTemplate'
    DependsOn:
      - InstanceSecurityGroup
    Properties:
      LaunchTemplateData:
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeSize: 40
          - DeviceName: /dev/sdf
            NoDevice: true
            Ebs: {}
        KeyName: !Ref KeyName
        ImageId: !If [PAYG, !FindInMap [LicenseRegion2AMI,!Ref 'AWS::Region',"PAYGAl2023"], !FindInMap [LicenseRegion2AMI, !Ref 'AWS::Region', "BYOLAl2023"]]
        UserData: !Base64
          'Fn::Join':
            - ''
            - - MARKLOGIC_CLUSTER_NAME=
              - !Ref MarkLogicDDBTable
              - |+

              - MARKLOGIC_EBS_VOLUME=
              - !Ref MarklogicVolume1
              - ',:'
              - !Ref VolumeSize
              - '::'
              - !Ref VolumeType
              - ':'
              - !If
                - GP3
                - !Ref VolumeIOPS
                - ''
              - ':'
              - !If
                - GP3
                - !Ref VolumeThroughput
                - ''
              - |
                :,*
              - |
                MARKLOGIC_NODE_NAME=NodeA#
              - MARKLOGIC_ADMIN_USERNAME=
              - !Ref AdminUser
              - |+

              - MARKLOGIC_ADMIN_PASSWORD=
              - !Ref AdminPass
              - |+

              - |
                MARKLOGIC_CLUSTER_MASTER=1
              - MARKLOGIC_LICENSEE=
              - !Ref Licensee
              - |+

              - MARKLOGIC_LICENSE_KEY=
              - !Ref LicenseKey
              - |+

              - MARKLOGIC_LOG_SNS=
              - !Ref LogSNS
              - |+

              - MARKLOGIC_AWS_SWAP_SIZE=
              - 32
              - |+

              - !If
                - UseVolumeEncryption
                - !Join
                  - ''
                  - - 'MARKLOGIC_EBS_KEY='
                    - !If
                      - HasCustomEBSKey
                      - !Ref VolumeEncryptionKey
                      - 'default'
                - ''

        SecurityGroupIds:
          - !Ref InstanceSecurityGroup
        InstanceType: !Ref InstanceType
        IamInstanceProfile: 
          Name: !Ref IAMRole
        MetadataOptions:
          HttpTokens: required
        InstanceMarketOptions: !If
          - UseSpot
          - MarketType: spot 
            SpotOptions: 
              MaxPrice: !Ref SpotPrice
          - !Ref 'AWS::NoValue'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2efb8cfb-df53-401d-8ff2-34af0dd25993
  LaunchTemp2:
    Condition: MultiZone
    Type: 'AWS::EC2::LaunchTemplate'
    DependsOn:
      - InstanceSecurityGroup
    Properties:
      LaunchTemplateData:
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeSize: 40
          - DeviceName: /dev/sdf
            NoDevice: true
            Ebs: {}
        KeyName: !Ref KeyName
        ImageId: !If [PAYG, !FindInMap [LicenseRegion2AMI,!Ref 'AWS::Region',"PAYGAl2023"], !FindInMap [LicenseRegion2AMI, !Ref 'AWS::Region', "BYOLAl2023"]]
        UserData: !Base64
          'Fn::Join':
            - ''
            - - MARKLOGIC_CLUSTER_NAME=
              - !Ref MarkLogicDDBTable
              - |+

              - MARKLOGIC_EBS_VOLUME=
              - !Ref MarklogicVolume2
              - ',:'
              - !Ref VolumeSize
              - '::'
              - !Ref VolumeType
              - ':'
              - !If
                - GP3
                - !Ref VolumeIOPS
                - ''
              - ':'
              - !If
                - GP3
                - !Ref VolumeThroughput
                - ''
              - |
                :,*
              - |
                MARKLOGIC_NODE_NAME=NodeB#
              - MARKLOGIC_ADMIN_USERNAME=
              - !Ref AdminUser
              - |+

              - MARKLOGIC_ADMIN_PASSWORD=
              - !Ref AdminPass
              - |+

              - |
                MARKLOGIC_CLUSTER_MASTER=0
              - MARKLOGIC_LICENSEE=
              - !Ref Licensee
              - |+

              - MARKLOGIC_LICENSE_KEY=
              - !Ref LicenseKey
              - |+

              - MARKLOGIC_LOG_SNS=
              - !Ref LogSNS
              - |+

              - MARKLOGIC_AWS_SWAP_SIZE=
              - 32
              - |+

              - !If
                - UseVolumeEncryption
                - !Join
                  - ''
                  - - 'MARKLOGIC_EBS_KEY='
                    - !If
                      - HasCustomEBSKey
                      - !Ref VolumeEncryptionKey
                      - 'default'
                - ''

        SecurityGroupIds:
          - !Ref InstanceSecurityGroup
        InstanceType: !Ref InstanceType
        IamInstanceProfile: 
          Name: !Ref IAMRole
        MetadataOptions:
          HttpTokens: required
        InstanceMarketOptions: !If
          - UseSpot
          - MarketType: spot 
            SpotOptions: 
              MaxPrice: !Ref SpotPrice
          - !Ref 'AWS::NoValue'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c8296a50-a29e-4646-aa74-8f1b735a9a3f
  LaunchTemp3:
    Condition: MultiZone
    Type: 'AWS::EC2::LaunchTemplate'
    DependsOn:
      - InstanceSecurityGroup
    Properties:
      LaunchTemplateData:
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              VolumeSize: 40
          - DeviceName: /dev/sdf
            NoDevice: true
            Ebs: {}
        KeyName: !Ref KeyName
        ImageId: !If [PAYG, !FindInMap [LicenseRegion2AMI,!Ref 'AWS::Region',"PAYGAl2023"], !FindInMap [LicenseRegion2AMI, !Ref 'AWS::Region', "BYOLAl2023"]]
        UserData: !Base64
          'Fn::Join':
            - ''
            - - MARKLOGIC_CLUSTER_NAME=
              - !Ref MarkLogicDDBTable
              - |+

              - MARKLOGIC_EBS_VOLUME=
              - !Ref MarklogicVolume3
              - ',:'
              - !Ref VolumeSize
              - '::'
              - !Ref VolumeType
              - ':'
              - !If
                - GP3
                - !Ref VolumeIOPS
                - ''
              - ':'
              - !If
                - GP3
                - !Ref VolumeThroughput
                - ''
              - |
                :,*
              - |
                MARKLOGIC_NODE_NAME=NodeC#
              - MARKLOGIC_ADMIN_USERNAME=
              - !Ref AdminUser
              - |+

              - MARKLOGIC_ADMIN_PASSWORD=
              - !Ref AdminPass
              - |+

              - |
                MARKLOGIC_CLUSTER_MASTER=0
              - MARKLOGIC_LICENSEE=
              - !Ref Licensee
              - |+

              - MARKLOGIC_LICENSE_KEY=
              - !Ref LicenseKey
              - |+

              - MARKLOGIC_LOG_SNS=
              - !Ref LogSNS
              - |+

              - MARKLOGIC_AWS_SWAP_SIZE=
              - 32
              - |+

              - !If
                - UseVolumeEncryption
                - !Join
                  - ''
                  - - 'MARKLOGIC_EBS_KEY='
                    - !If
                      - HasCustomEBSKey
                      - !Ref VolumeEncryptionKey
                      - 'default'
                - ''

        SecurityGroupIds:
          - !Ref InstanceSecurityGroup
        InstanceType: !Ref InstanceType
        IamInstanceProfile: 
          Name: !Ref IAMRole
        MetadataOptions:
          HttpTokens: required
        InstanceMarketOptions: !If
          - UseSpot
          - MarketType: spot 
            SpotOptions: 
              MaxPrice: !Ref SpotPrice
          - !Ref 'AWS::NoValue'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7fa68c90-39bc-4874-ad20-8cd8c974ed52
  #Application Load Balancer description for MultiZone deployments (3 zones).
  Alb:
    Condition: MultiZone
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn:
      - VpcStack
      - ElbSecurityGroup
    Properties: 
      SecurityGroups: 
        - !Ref ElbSecurityGroup
      Subnets: 
        - !GetAtt [VpcStack, Outputs.PublicSubnet1Id]
        - !If [MultiZone, !GetAtt [VpcStack, Outputs.PublicSubnet2Id], !Ref 'AWS::NoValue']
        - !If [MultiZone, !GetAtt [VpcStack, Outputs.PublicSubnet3Id], !Ref 'AWS::NoValue']
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e188e71e-5f01-4816-896e-9bd30b9a96c1
  #Descriptions of the 9 TargetGroups for MultiZone deployments (3 zones). TargetGroups route requests to registered targets.
  #Health checks are performed on each TargetGroup.
  AlbTargetGroup1:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8000
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup2:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8001
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup3:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8002
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup4:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8003
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup5:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8004
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup6:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8005
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup7:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8006
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup8:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8007
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  AlbTargetGroup9:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - VpcStack
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      HealthCheckPort: 7997
      UnhealthyThresholdCount: 5
      Port: 8008
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 3600
        - Key: deregistration_delay.timeout_seconds
          Value: 60
      VpcId: !GetAtt [VpcStack, Outputs.VpcId]
  #Descriptions of the 9 Listeners for MultiZone deployments (3 zones). Each Listener connects Application Load Balancer to a TargetGroup with a particular port.
  AlbListener1:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup1
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup1
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8000
      Protocol: HTTP
  AlbListener2:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup2
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup2
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8001
      Protocol: HTTP
  AlbListener3:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup3
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup3
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8002
      Protocol: HTTP
  AlbListener4:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup4
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup4
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8003
      Protocol: HTTP
  AlbListener5:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup5
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup5
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8004
      Protocol: HTTP
  AlbListener6:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup6
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup6
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8005
      Protocol: HTTP
  AlbListener7:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup7
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup7
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8006
      Protocol: HTTP
  AlbListener8:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup8
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup8
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8007
      Protocol: HTTP
  AlbListener9:
    Condition: MultiZone
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    DependsOn:
      - Alb
      - AlbTargetGroup9
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref AlbTargetGroup9
          Type: forward
      LoadBalancerArn: !Ref Alb
      Port: 8008
      Protocol: HTTP
Outputs:
  URL:
    Description: The URL of the MarkLogic Cluster
    Value: !Join
      - ''
      - - 'http://'
        - !If [MultiZone, !GetAtt [Alb, DNSName], !GetAtt [ManagedEniStack, Outputs.ENI]]
        - ':8001'
  PrivateSubnetRouteTableID:
    Description: Private Subnet Route Table ID
    Value: !GetAtt [VpcStack, Outputs.PrivateSubnetRouteTableID]
  InstanceSecurityGroupID:
    Description: Instance Security Group ID
    Value: !Ref InstanceSecurityGroup
  ClusterEndpoint:
    Description: The endpoint URL for the MarkLogic Cluster (DNS name or IP) - Primary endpoint only
    Value: !If 
      - MultiZone
      - !GetAtt [Alb, DNSName]
      - !Select 
        - 0
        - !Split 
          - ','
          - !GetAtt [ManagedEniStack, Outputs.ENI]
    Export:
      Name: !Sub ${AWS::StackName}-ClusterEndpoint
  AdminUsername:
    Description: MarkLogic Admin Username
    Value: !Ref AdminUser
    Export:
      Name: !Sub ${AWS::StackName}-AdminUser
  SecurityGroupId:
    Description: Security Group ID for Lambda VPC access
    Value: !Ref InstanceSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-SecurityGroup
  PrivateSubnet1Id:
    Description: Private Subnet 1 ID for Lambda VPC access
    Value: !GetAtt [VpcStack, Outputs.PrivateSubnet1Id]
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSubnet1
